// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders content 1`] = `
.emotion-0 {
  background-color: #fff;
  border: solid 1px rgba(46,91,255,0.08);
  border-radius: 1px;
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  display: block;
  margin: 6px;
  padding: 32px 24px;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin: 12px;
  }
}

<div>
  <div
    class="emotion-0"
    data-testid="card"
  >
    The SMS program is down, synthesize the redundant feed so we can synthesize the SQL hard drive!
  </div>
</div>
`;

exports[`Card renders content with heading 1`] = `
.emotion-0 {
  background-color: #fff;
  border: solid 1px rgba(46,91,255,0.08);
  border-radius: 1px;
  box-shadow: 0 10px 20px 0 rgba(46,91,255,0.07);
  display: block;
  margin: 6px;
  padding: 32px 24px;
}

@media (min-width: 768px) {
  .emotion-0 {
    margin: 12px;
  }
}

.emotion-1 {
  color: #8798ad;
  font-size: 0.8666666666666667em;
  font-weight: 400;
  margin: 0 0 24px;
  letter-spacing: 1.2px;
  text-transform: uppercase;
}

<div>
  <div
    class="emotion-0"
    data-testid="card"
  >
    <h3
      class="emotion-1"
      data-testid="card-heading"
    >
      You can't input the array without navigating the redundant GB alarm!
    </h3>
    You can't quantify the interface without parsing the neural ADP feed!
  </div>
</div>
`;
